try to LaTeX dol-diff

--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -3441,11 +3441,8 @@ entities.  For this use-case three such ontologies are considered, containing sp
 using \DOL syntax:
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,escapechar=@,mathescape]
-\DIFaddend @*  %prefix(
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,escapechar=@,mathescape]
+%prefix(
            gfo:   <http://www.onto-med.de/ontologies/>
            dolce: <http://www.loa-cnr.it/ontologies/>
            bfo:   <http://www.ifomis.org/bfo/>
@@ -3672,11 +3669,8 @@ following way enhances both readability and potential for re-use
 of specifications:
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={sort, ops, refinement, free,spec type, assoc, unit,props,op,spec,refined, via,generated, then,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]	
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]	
-\DIFaddend @*  %prefix( lang:  <http://purl.net/DOL/languages/> )%
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]	
+%prefix( lang:  <http://purl.net/DOL/languages/> )%
 
 library Sorting
 
@@ -3772,11 +3766,8 @@ specification from use case in section \ref{spec-1} into a specification of a pa
 algorithm (for simplicity, insert sort is used for demonstration):
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={sort, ops, refinement, free,spec type, assoc, unit,props,op,spec,refined, via,generated, then,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]	
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]	
-\DIFaddend @*  spec InsertSort = 
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]	
+spec InsertSort = 
   TotalOrder and List
 then
   ops insert : Elem*List -> List;
@@ -3811,11 +3802,8 @@ as lists of binary digits, together with several equivalent ways of
 composing these refinements.
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={sort, ops, refinement, free,spec type, assoc, unit,props,op,spec,refined, via,generated, then,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]	
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]	
-\DIFaddend @*  spec Monoid =
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]	
+spec Monoid =
  sort Elem
  ops 0 : Elem;
          __+__ : Elem * Elem -> Elem, assoc, unit 0
@@ -4091,11 +4079,8 @@ Fig.~\ref{fig:state-machine} & stm & state machine\\\hline
 \end{tabular}
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via,network,entailment,entails,refined,consistent},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
-\DIFaddend @*  %prefix( :      <http://www.example.org/uml/>
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
+%prefix( :      <http://www.example.org/uml/>
          uml:   <http://www.uml.org/spec/UML/>log:   <http://purl.net/DOL/logics/> )%
                 %% descriptions of logics ...
 library ATM
@@ -5513,17 +5498,8 @@ GeneralizedTerm    ::=  *@ \DIFdelbegin \DIFdel{SymbolRef
 RelationReference  ::= IRI
 StandardRelation   ::= }\DIFaddend @*  '>' | '<' | '=' | '%DIF < ' | 'ni' | 'in' | IRI
 %DIF > ' | 'ni' | 'in'
-                        *@ \DIFaddbegin \DIFadd{*@$<$ }\rm \DIFadd{No keyword corresponding to @*default-relation*@ }\rm \DIFadd{as this is just the default if@*
-                       *@}\phantom{$<$ }\DIFadd{@*Relation*@ }\rm \DIFadd{is omitted$>$@*
-}\DIFaddend @*  Confidence         ::= Double
-\DIFdelbegin %DIFDELCMD < \end{lstlisting}
-%DIFDELCMD < 
-
-%DIFDELCMD < \begin{lstlisting}[language=ebnf,escapeinside={()}]
-%DIFDELCMD < 
-
-%DIFDELCMD < %%%
-\DIFdelend )  Double             ::=  ( \DIFdelbegin \DIFdel{(}\DIFdelend )   ( \DIFaddbegin \DIFadd{*}\DIFaddend )  $<$ a number $\in [0,1]$ $>$ ( \DIFdelbegin \DIFdel{) 
+Confidence         ::= Double
+Double             ::=  ( \DIFdelbegin \DIFdel{(}\DIFdelend )   ( \DIFaddbegin \DIFadd{*}\DIFaddend )  $<$ a number $\in [0,1]$ $>$ ( \DIFdelbegin \DIFdel{) 
 }\DIFdelend )   ( \DIFaddbegin \DIFadd{@*
 }\DIFaddend \end{lstlisting}
 
@@ -5628,11 +5604,8 @@ means that the CURIE \url{lang:OWL2} will be expanded to the IRI
 \url{http://purl.net/DOL/languages/OWL2}.
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,import},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
-\DIFaddend @*  %prefix( :      <http://www.example.org/mereology#>
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
+%prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://purl.net/DOL/languages/>
                 %% definitions of conforming languages ...
@@ -5675,40 +5648,7 @@ RDF/XML or Turtle, support a subset of the CURIE syntax, whereas some machine-or
 serializations, including N-Triples, only support full IRIs.}
 
 CURIEs can occur in any place where IRIs are allowed, as stated in \cref{c:iris}.
-\DIFdelbegin \DIFdel{Informatively, 
-the CURIE grammar supported by }%DIFDELCMD < \DOL %%%
-\DIFdel{can be restated as follows:
-}%DIFDELCMD < \begin{lstlisting}[language=ebnf,escapeinside={()}]
-%DIFDELCMD < %%%
-\DIFdelend )  
-
- ( \DIFdelbegin \DIFdel{CURIE         ::= MaybeEmptyCURIE -
-MaybeEmptyCURIE ::= }%DIFDELCMD < [%%%
-\DIFdel{Prefix}%DIFDELCMD < ] %%%
-\DIFdel{RefWithoutComma
-RefWithoutComma ::= Reference - StringWithComma
-StringWithComma ::= UChar* ',' UChar*
-UChar         ::= ($<$ any Unicode }%DIFDELCMD < \nisref{ISO/IEC 10646} %%%
-\DIFdel{character $>$) 
-Prefix        ::= NCName ':'($<$ }%DIFDELCMD < \rm %%%
-\DIFdel{see ``NCName'' in }%DIFDELCMD < \nisref{W3C/TR REC-xml-names:2009}%%%
-\DIFdel{, Section 3 $>$)
-Reference     ::= Path }%DIFDELCMD < [%%%
-\DIFdel{Query}%DIFDELCMD < ] [%%%
-\DIFdel{Fragment}%DIFDELCMD < ]
-%DIFDELCMD < %%%
-\DIFdel{Path          ::= ipath-absolute | ipath-rootless | ipath-empty($<$ }%DIFDELCMD < \rm %%%
-\DIFdel{as defined in }%DIFDELCMD < \nisref{IETF/RFC 3987} %%%
-\DIFdel{$>$)
-Query         ::= '?' iquery($<$ }%DIFDELCMD < \rm %%%
-\DIFdel{as defined in }%DIFDELCMD < \nisref{IETF/RFC 3987} %%%
-\DIFdel{$>$)
-Fragment      ::= '#' ifragment($<$ }%DIFDELCMD < \rm %%%
-\DIFdel{as defined in }%DIFDELCMD < \nisref{IETF/RFC 3987} %%%
-\DIFdel{$>$)
-}%DIFDELCMD < \end{lstlisting}
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \DIFadd{The CURIE grammar of }\DOL \DIFadd{is summarized in \cref{c:curie-syntax}.
+\DIFaddbegin \DIFadd{The CURIE grammar of }\DOL \DIFadd{is summarized in \cref{c:curie-syntax}.
 }\DIFaddend 
 
 %\ednote{This is concrete syntax. Shouldn't it be moved to chapter \ref{{a:text-syntax}}? --- I have copied it there, altough this is code
@@ -10208,8 +10148,6 @@ are provided below.  Table \ref{tab:namespace} lists the prefixes and namespaces
 Normative snapshots of the implementation are published there. The IRI for the 
  version of the }%DIFDELCMD < \DOL %%%
 \DIFdelFL{Ontology that corresponds to this version of the OMG standard is }%DIFDELCMD < \url{http://www.omg.org/spec/DOL/20150801/dol-language/}%%%
-\DIFdelFL{.
-}\DIFdelendFL \DIFaddbeginFL \hline \multicolumn{2}{l}{\textit{Continued on next page}} \\
  \endfoot
  \hline
  \endlastfoot
@@ -10258,10 +10196,11 @@ at }%DIFDELCMD < \url{https://ontohub.org/meta/dol-ontology.omn}%%%
 \DIFdel{.
 }%DIFDELCMD < 
 
+\DIFdelbegin
 %DIFDELCMD < %%%
 \DIFdel{It is intended to implement future versions of the }%DIFDELCMD < \DOL %%%
 \DIFdel{ontology as a DOL document in }%DIFDELCMD < \DOL%%%
-\DIFdelend \DIFaddbegin \DIFadd{Note that the URI/IRI strategy for the ontology takes a “slash” rather than “hash” approach, in 
+\DIFdelend \DIFaddbegin \DIFadd{Note that the URI/IRI strategy for the ontology takes a ``slash'' rather than ``hash'' approach, in 
  order to accommodate server-side applications.   Table \ref{tab:dolnamespace} provides the namespace definition for 
  the DOL ontology.  While the prefixes given in Tables \ref{tab:namespace} and \ref{tab:dolnamespace} are informative, their use is 
  required in any extension, including API4KP}\DIFaddend .
@@ -10313,13 +10252,13 @@ these in software.  }%DIFDELCMD <
  \begin{longtable}{|p{0.1\textwidth}|p{0.8\textwidth}|}
  %DIF > \caption{Optional Requirements}\\
  \hline
-  \textbf{\DIFaddFL{Prefix}} & \textbf{\DIFaddFL{Namespace}}\\
+  \textbf{{Prefix}} & \textbf{{Namespace}}\\
  \hline
  \endfirsthead
  \multicolumn{2}{l}%DIF > 
- {\tablename\ \thetable\ \DIFaddFL{-- }\textit{\DIFaddFL{Continued from previous page}}} \\
+ {\tablename\ \thetable\ {-- }\textit{{Continued from previous page}}} \\
  \hline
- \textbf{\DIFaddFL{Prefix}} & \textbf{\DIFaddFL{Namespace}}\\ \hline
+ \textbf{{Prefix}} & \textbf{{Namespace}}\\ \hline
  \endhead
  \DIFaddendFL 
 
@@ -10329,25 +10268,23 @@ these in software.  }%DIFDELCMD <
  \endfoot
  \hline
  \endlastfoot
-\DIFaddFL{dol }& \url{http://www.omg.org/spec/DOL/DOL-terms/}\\    \hline
+dol & \url{http://www.omg.org/spec/DOL/DOL-terms/}\\    \hline
  %DIF > 	
  \end{longtable}
- \caption{\DIFaddFL{Prefix and Namespaces for the DOL ontology}}
+ \caption{{Prefix and Namespaces for the DOL ontology}}
  \label{tab:dolnamespace}
  \end{center}
  \end{table}
-\DIFaddend 
+ 
 
  
  
 
-\DIFdelbegin %DIFDELCMD < \section{\DOL Registry}\label{a:registry}
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \DIFadd{The ontology itself is not documented here, as it is informative, and the bulk of the ontology is 
+ \DIFaddbegin \DIFadd{The ontology itself is not documented here, as it is informative, and the bulk of the ontology is 
 documented in clause~\ref{terms-and-defs}, Terms and Definitions, as stated above.  
 Later versions of this 
 specification may provide complete documentation, including machine-readable, ODM-compliant UML 
-XMI, ODM XMI, and additional content such as “about” files, if usage of the ontology is more 
+XMI, ODM XMI, and additional content such as ``about'' files, if usage of the ontology is more 
 widespread than anticipated and thus such documentation is warranted.
 }\DIFaddend 
 
@@ -11186,18 +11123,10 @@ e.g.\ \texttt{buml:Boolean}, \texttt{form:Number},
 The following infrastructure, consisting off a number of predicates
 axiomatized in Common Logic, provides a foundation for an institution
 for UML class \DIFdelbegin \DIFdel{diagrams }\DIFdelend \DIFaddbegin \DIFadd{models }\DIFaddend described in the later sections of this Annex.
-\DIFdelbegin %DIFDELCMD < 
 
 \lstset{escapeinside = {*@}{@*}}
-%DIFDELCMD < \begin{lstlisting}[language=clif,morekeywords={then,with,logic,oms,end},mathescape]
-%DIFDELCMD < %%%
-\DIFdelend @*  %DIF > 
-\lstset{escapeinside = {*@}{@*}}
- *@ \DIFaddbegin \begin{lstlisting}[\DIFadd{language=clif, basicstyle=}{\ttfamily\fontsize{8pt}{9pt}\selectfont}\DIFadd{,
-                   morekeywords=}{\DIFadd{then, with, logic, oms, end}}\DIFadd{,
-                   morecomment=}{[\DIFadd{l}]{\DIFadd{//}}}\DIFadd{,
-                   mathescape}]
-\DIFaddend @*  logic CLIF
+\begin{lstlisting}[language=clif,morekeywords={then,with,logic,oms,end},mathescape]
+logic CLIF
 
 oms pairs =
   (forall (x y) (= (form:first (form:pair x y)) x))
@@ -11947,12 +11876,8 @@ In this case, additionally, the Common Logic theory is augmented by
 \end{itemize}
 \DIFaddbegin 
 
-  \DIFaddend \item for each relation $c_1 \leq_C c_2$, an axiom \DIFdelbegin \texttt{\DIFdel{(forall (x) (if ($C_1$ x) ($C_2$ x)))}}%DIFAUXCMD
-\DIFdel{,
-  where $C_1 = \CL(c_1)$, $C_2 = \CL(c_2)$, 
-}\DIFdelend %DIF > 
-\DIFaddbegin \lstinline[language=clif, mathescape]\DIFadd{!(forall (x) (if ($\CL(c_1)$ x) ($\CL(c_2)$ x)))!
-}\DIFaddend 
+  \DIFaddend \item for each relation $c_1 \leq_C c_2$, an axiom 
+\lstinline[language=clif, mathescape]{!(forall (x) (if ($\CL(c_1)$ x) ($\CL(c_2)$ x)))!}
 
   %DIF <   \item $\CL$ maps each instance specification declaration ${k : c} \in K$ to constant $\CL(k)$ and an axiom
 %DIF < \texttt{(c k)}, where by abuse of notation, we identify $c$ with $\CL(c)$, and $k$ with $(\CL(k))$ (this abuse of notation will also be used in the sequel);
@@ -12013,7 +11938,7 @@ and axioms stating type-correctness and functionality:
 }\end{lstlisting}%DIF > 
 \footnotetext{\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]\DIFadd{!($\tau[c^\prime]\ $ y)! is an abbreviation of either
 }\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]\DIFadd{!(and ($\mathsf{CL}(\tau)\ $ y) (forall (m) (if (from:$\mathsf{CL}(\tau)$-member m y) ($\mathsf{CL}(c^\prime)\ $ m))))! (if $\tau$ is present)
-or just }\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]\DIFadd{!($c^\prime\ $ y)! (if $\tau$ is omitted).}}
+or just }\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!($c^\prime\ $ y)! (if $\tau$ is omitted).}
 
   \DIFaddend \item $\CL$
 maps each query operation declaration
