dol-diff completed

--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -11936,11 +11936,12 @@ and axioms stating type-correctness and functionality:
   (forall (x) (if ($\CL(c)$ x) (exists (y) ($\CL(c.p)$ x y))))
   (forall (x y z) (if (and ($\CL(c.p)$ x y) ($\CL(c.p)$ x z)) (= y z)))
 }\end{lstlisting}%DIF > 
-\footnotetext{\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]\DIFadd{!($\tau[c^\prime]\ $ y)! is an abbreviation of either
-}\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]\DIFadd{!(and ($\mathsf{CL}(\tau)\ $ y) (forall (m) (if (from:$\mathsf{CL}(\tau)$-member m y) ($\mathsf{CL}(c^\prime)\ $ m))))! (if $\tau$ is present)
-or just }\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!($c^\prime\ $ y)! (if $\tau$ is omitted).}
+\DIFaddend
+\footnotetext{{\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!($\tau[c^\prime]\ $ y)! is an abbreviation of either
+\lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!(and ($\mathsf{CL}(\tau)\ $ y) (forall (m) (if (from:$\mathsf{CL}(\tau)$-member m y) ($\mathsf{CL}(c^\prime)\ $ m))))! (if $\tau$ is present)
+or just \lstinline[language=clif, mathescape, basicstyle={\ttfamily\footnotesize}]!($c^\prime\ $ y)! (if $\tau$ is omitted).}}
 
-  \DIFaddend \item $\CL$
+   \item $\CL$
 maps each query operation declaration
 $c.q(x_1 : \tau_1[c_1], \dots, x_r : \tau_n[c_r]) : \tau[c'] \in O$
 to a predicate $\CL(c.q)$
@@ -12166,13 +12167,13 @@ the composite binary associations in $A$.  Abbreviate
 %DIF > 
 \DIFadd{by }\lstinline[language=clif]{(owner o x)}\DIFadd{, where, for each binary
 association $a^{j}$ represented
-in the simplified way, }\lstinline[language=clif, mathescape]\DIFadd{!($\CL(a^{j})$ o i)!
+in the simplified way, }\lstinline[language=clif, mathescape]!($\CL(a^{j})$ o i)!
 replaces
-}\lstinline[language=clif, mathescape]\DIFadd{!(form:sequence-member (form:pair o x) $\CL(a^{j})$)!.
+\lstinline[language=clif, mathescape]!(form:sequence-member (form:pair o x) $\CL(a^{j})$)!.
 Then
 %DIF > 
 \lstset{escapeinside = {*@}{@*}}
-}\begin{lstlisting}[language=clif, mathescape]
+\begin{lstlisting}[language=clif, mathescape]
 \DIFadd{(forall (o1 o2 x)
         (if (and (owner o1 x) (owner o2 x))
             (= o1 o2)))
@@ -13475,14 +13476,14 @@ SubstName          ::= IRI
 Symbol             ::= IRI
 }\DIFdelend )  SymbolMapItem      ::= symbol-map-item Symbol Symbol
 GeneralSymbolMapItem ::= Symbol | SymbolMapItem
- ( \DIFdelbegin \DIFdel{Sentence           ::= ($<$)an expression specific to an OMS language($>$) 
+Sentence           ::= ($<$)an expression specific to an OMS language($>$) 
 OMSName            ::= IRI
 OMSRef             ::= IRI
 ExtensionRef       ::= IRI
 LanguageRef        ::= IRI
 LogicRef           ::= IRI
 SyntaxRef          ::= IRI
-}\DIFdelend )  OMSLanguageTranslation ::= NamedTranslation | DefaultTranslation
+OMSLanguageTranslation ::= NamedTranslation | DefaultTranslation
 NamedTranslation   ::= named-trans OMSLanguageTranslationRef
 DefaultTranslation ::= default-trans LanguageRef
  ( \DIFaddbegin \DIFadd{RemovalKind        ::= keep | remove
@@ -14351,11 +14352,8 @@ end
 \DIFaddend 
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=OWL2manchester,escapechar=@,mathescape]
-\DIFaddend @*  %prefix( :      <http://www.example.org/mereology#>
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=OWL2manchester,escapechar=@,mathescape]
+%prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://purl.net/DOL/languages/>
                 %% definitions of conforming languages ...
@@ -14412,9 +14410,7 @@ Publications with translation DDL2-ECO
 end
 
 %DIF > % repeat prefix declarations from above
- *@ \DIFaddbegin 
-
-\DIFaddend @*  library Market
+library Market
 
 language lang:OWL2 logic log:SROIQ  *@ \DIFdelbegin \DIFdel{syntax }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{serialization }\DIFaddend @*  ser:OWL2/Manchester
  *@ \DIFdelbegin \DIFdel{ontology Purchases }\DIFdelend @*   *@ \DIFaddbegin 
@@ -14455,14 +14451,9 @@ end
 
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,equivalence},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-%DIF < prefix( :      <http://www.example.org/alignment#>
-         \DIFdel{owl:   <http://www.w3.org/2002/07/owl#>
-\lstset{escapeinside = {*@}{@*}}
-         }\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=clif,escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=clif,escapechar=@,mathescape]
 %DIF > prefix( :      <http://www.example.org/algebra#>
-         \DIFaddend @*  lang:  <http://purl.net/DOL/languages/>
+         lang:  <http://purl.net/DOL/languages/>
                 %% descriptions of languages ...
          ser:   <http://purl.net/DOL/serializations/>
                 %% ... serializations ...
@@ -14522,11 +14513,8 @@ end
 \end{lstlisting}
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,forget,entails,entailment,spec},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:CASL
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+language lang:CASL
 
 spec InterpolatedGroup =
   sort Elem
@@ -14546,11 +14534,8 @@ end
 
 \sssclause{Groups and hiding}
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  %prefix( lang: <http://purl.net/DOL/languages/> )%
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+%prefix( lang: <http://purl.net/DOL/languages/> )%
 
 library All_kinds_of_group_specifications
 
@@ -14574,11 +14559,8 @@ can be extended with an inverse, i.e.\ class of all groups. The effect
 is second-order quantification:
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:HasCASL
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+language lang:HasCASL
 spec Group_in_second_order_logic =
   sort Elem
   ops 0:Elem; __+__:Elem*Elem->Elem; 
@@ -14592,11 +14574,8 @@ end
 \sssclause{Groups and module extraction}
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:CASL
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+language lang:CASL
 spec Group_via_module_extraction_1 =
   Group_with_inverse remove inv
 end
@@ -14607,11 +14586,8 @@ This is of course unsatisfactory. A better use of module extraction
 is the following:
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:CASL
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+language lang:CASL
 spec Group_with_implicit_inverse =
   sort Elem
   ops 0:Elem; __+__:Elem*Elem->Elem; inv:Elem->Elem
@@ -14633,11 +14609,8 @@ is conservative.
 \sssclause{Groups via interpolation}
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:CASL
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+language lang:CASL
 spec Group_via_interpolation1 =
   Group_with_inverse forget inv
 end
@@ -14651,12 +14624,8 @@ are equivalent to \syntax{Group\_with\_implicit\_inverse}.
 \medskip
 
 \lstset{escapeinside = {*@}{@*}}
-\sssclause{Groups and filtering} *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\DIFdelend @*   *@ \DIFaddbegin \label{ex:reject}
-\lstset{escapeinside = {*@}{@*}}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:CASL
+language lang:CASL
 spec Group_via_Filtering_1 =
   Group_with_inverse reject inv
 end
@@ -14668,11 +14637,8 @@ Both specifications are equivalent, and they are equivalent
 to the following theory which just omits the inverse
 axioms (and hence does not specify groups):
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  language lang:CASL
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+language lang:CASL
 spec Group_via_reject =
   sort Elem
   ops 0:Elem; __+__:Elem*Elem->Elem
@@ -14682,17 +14648,10 @@ end
 \end{lstlisting}
 
 
-\DIFdelbegin %DIFDELCMD < \sclause{Queries}
-\lstset{escapeinside = {*@}{@*}}
-%DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,query,select,where,in,substitution,result,for,along,library,spec,sort,pred,op},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\DIFdelend @*   *@ \DIFaddbegin \sclause{Real Numbers and Metric Spaces}\label{ex:metric-spaces}
+\sclause{Real Numbers and Metric Spaces}\label{ex:metric-spaces}
 \lstset{escapeinside = {*@}{@*}}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  %prefix( lang:  <http://purl.net/DOL/languages/> )%
- *@ \DIFdelbegin \DIFdel{library MyQuery
-}\DIFdelend @*   *@ \DIFaddbegin 
-
+%prefix( lang:  <http://purl.net/DOL/languages/> )%
 \DIFadd{library MetricSpaces
 }
 
@@ -14883,49 +14842,39 @@ end
 \DIFaddend 
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,in,approximate,extract,free,cofree,spec},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\lstset{escapeinside = {*@}{@*}}
-\DIFdelend @*   *@ \DIFaddbegin \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-\DIFaddend @*  %prefix( lang:  <http://purl.net/DOL/languages/> )%
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+%prefix( lang:  <http://purl.net/DOL/languages/> )%
+
 library Datatypes
 language lang:CASL
 
- *@ \DIFdelbegin \DIFdel{spec Bag }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{spec Bag }\DIFaddend @*  =
+spec Bag =
   sort Elem
   then free {
-      *@ \DIFdelbegin \DIFdel{sort Bag
+     sort Bag
      ops mt:Bag;
-         __ union__:}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{sort Bag
-     ops mt:Bag;
-         __union__:}\DIFaddend @*  Bag*Bag->Bag, assoc, comm, unit mt
+         __union__:Bag*Bag->Bag, assoc, comm, unit mt
            }
 end
 
- *@ \DIFdelbegin \DIFdel{spec Stream }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{spec Stream }\DIFaddend @*  =
-   *@ \DIFdelbegin \DIFdel{sort Elem
-  then cofree }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{sort Elem
-  then cofree }\DIFaddend @*  {
-      *@ \DIFdelbegin \DIFdel{sort Stream
-     ops head:}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{sort Stream
-     ops head:}\DIFaddend @*  Stream- *@ \DIFdelbegin \DIFdel{>Elem ;
-         tail:}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{>Elem;
-         tail:}\DIFaddend @*  Stream->Stream
+spec Stream =
+  sort Elem
+  then cofree {
+     sort Stream
+     ops head:Stream->Elem;
+         tail:Stream->Stream
            }
 end
 
- *@ \DIFdelbegin \DIFdel{spec Finite }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{spec Finite }\DIFaddend @*  =
-   *@ \DIFdelbegin \DIFdel{sort Elem
-  free type Nat ::}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{sort Elem
-  free type Nat ::}\DIFaddend @*  = 0 |  *@ \DIFdelbegin \DIFdel{suc(Nat)
-  op f: Nat }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{suc(Nat)
-  op f: Nat }\DIFaddend @*  -> *@ \DIFdelbegin \DIFdel{? Elem
-     . forall x:Elem . exists n:Nat . f(}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{? Elem
-  . forall x:Elem . exists n:Nat . f(}\DIFaddend @*  n)=x           %DIF < (f_surjective)%
-   *@ \DIFdelbegin \DIFdel{. exists n:Nat . forall m:Nat . }\DIFdelend @*  %DIF > (f_surjective)%
-   *@ \DIFaddbegin \DIFadd{. exists n:Nat . forall m:Nat . }\DIFaddend @*  def f(m) => m<n   %(f_bounded)%
+spec Finite =
+  sort Elem
+  free type Nat ::= 0 | suc(Nat)
+  op f: Nat ->? Elem
+  . forall x:Elem . exists n:Nat . f(n)=x           %(f_surjective)%
+  . exists n:Nat . forall m:Nat . def f(m) => m<n   %(f_bounded)%
   reveal Elem
 end
+
 
 \end{lstlisting}
 
