--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -70,8 +70,8 @@
 %DIF < %\usepackage[show]{ed}
 %DIF < \usepackage[hide]{ed}
 %DIF -------
-\usepackage[show]{ed} %DIF > 
-%\usepackage[hide]{ed} %DIF > 
+\%usepackage[show]{ed} %DIF > 
+\usepackage[hide]{ed} %DIF > 
 %DIF -------
 
 %color highlight, for editing
@@ -6120,8 +6120,9 @@ and
 closed-world
 cofree
 combine
- *@ \DIFaddbegin \DIFadd{cons-ext
-}\DIFaddend @*  end
+*@\DIFaddbegin \DIFadd{cons-ext
+}\DIFaddend @*  
+end
 entails
 entailment
 equivalence
@@ -6140,8 +6141,9 @@ library
 logic
 maximize
 model
- *@ \DIFdelbegin \DIFdel{module
-}\DIFdelend @*  minimize
+*@\DIFdelbegin \DIFdel{module
+}\DIFdelend @*  
+minimize
 network
 ni
 of
@@ -7626,7 +7628,7 @@ $locId = postfixLogicIRI(O.\syntax{omsRef},name(\Gamma.logic))$, }\DIFaddend as 
    }\DIFaddend \item \DIFdelbegin \DIFdel{$\Mod(o) = \{M\in \Mod(\Sig(o)) \mid M\forget\Sigma \in \cM \text{ and } 
                       M\forget \Sig(\Gamma(o.\syntax{omsRef})) \in 
                       \Mod(\Gamma(o.\syntax{omsRef}))\}$
-   }\DIFdelend \DIFaddbegin \DIFadd{$\cM' = \{M\in \Mod(\Sigma') \mid M\forget\Sigma \in \cM \text{ and } 
+   }\DIFdelend \\\DIFaddbegin \DIFadd{$\cM' = \{M\in \Mod(\Sigma') \mid M\forget\Sigma \in \cM \text{ and } 
                       M\forget {\Sig(\Gamma(locId))} \in 
                       \Mod(\Gamma(locId))\}$
    }\DIFaddend \item \DIFdelbegin \DIFdel{$\Th(o) = \iota_{\Sig(\Gamma(o.\syntax{omsRef})\subseteq \Sig(o)}(\Th(\Gamma(o.\syntax{omsRef}))) \cup \iota_{\Sigma\subseteq \Sig(o)}(\Delta)$
@@ -7712,7 +7714,7 @@ local environment (= fixed non-logical symbols, in the terminology of circumscri
 Formally, if \DIFdelbegin \DIFdel{$O'$ }\DIFdelend \DIFaddbegin \DIFadd{$O$ }\DIFaddend is a \syntax{RelativeClosureOMS},
 \DIFdelbegin \DIFdel{$O'.\syntax{closureType} = \syntax{minimize}$
 and $O = O'.\syntax{closableOMS}$, then 
-}\DIFdelend \DIFaddbegin \DIFadd{$O.\syntax{closureType} = \syntax{minimize}$
+}\DIFdelend \\\DIFaddbegin \DIFadd{$O.\syntax{closureType} = \syntax{minimize}$
 and $O'= O.\syntax{closableOMS}$, and}\\
 \DIFadd{$sem(\Gamma, (\cI, \Sigma, \cM, \Delta), O') = 
 (\Gamma', (\cI', \Sigma',\cM',\Delta'))$ then
@@ -7764,7 +7766,7 @@ only the model class differs:
 \item if \DIFdelbegin \DIFdel{$O'.\syntax{closureType} = \syntax{maximize}$,
 $\Mod(O') = 
         \{ M \in  \Mod(O) \mid  M \text{ is maximal in } \{M' \in \Mod(O) \mid M'\forget\Sigma = M\forget\Sigma\}\}$
-}\DIFdelend \DIFaddbegin \DIFadd{$O.\syntax{closureType} = \syntax{maximize}$,
+}\DIFdelend\\ \DIFaddbegin \DIFadd{$O.\syntax{closureType} = \syntax{maximize}$,
 $\cM'' = 
         \{ M \in  \cM \mid  M \text{ is maximal in } \{M' \in \cM \mid M'\forget\Sigma = M\forget\Sigma\}\}$
 }\DIFaddend \item if \DIFdelbegin \DIFdel{$O'.\syntax{closureType} = \syntax{free}$,
