--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -70,7 +70,7 @@
 %DIF < %\usepackage[show]{ed}
 %DIF < \usepackage[hide]{ed}
 %DIF -------
-\%usepackage[show]{ed} %DIF > 
+%\usepackage[show]{ed} %DIF > 
 \usepackage[hide]{ed} %DIF > 
 %DIF -------
 
