correcting lstlisting environments

--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -3861,8 +3861,8 @@ The network expresses the distributed character of the development:
 some people might use only }\syntax{Int}\DIFadd{, others only }\syntax{List}\DIFadd{,
 so there is no necessity to unite all specifications into one
 large specification.} \DIFaddend 
-\lstset{escapeinside = {*@}{@*}
-}\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
+\lstset{escapeinside = {*@}{@*}}
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
 *@ \DIFaddbegin \DIFadd{spec Int = %DIF > mono
   Nat
 then %DIF > mono
@@ -3888,7 +3888,8 @@ end
 
 \DIFadd{network NatIntList = Nat, Int, List
 end
-}\DIFaddend @* \end{lstlisting}
+}\DIFaddend @* 
+\end{lstlisting}
 
 \begin{figure}
 $$\DIFaddbeginFL \DIFaddFL{\xymatrix{
@@ -4115,9 +4116,7 @@ e.g.\ \url{http://www.example.org/uml/atm.xmi} }
 
 
 \lstset{escapeinside = {*@}{@*}}
- *@ \DIFdelbegin %DIFDELCMD < \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via},escapechar=@,mathescape]
-%DIFDELCMD < %%%
-\DIFdelend @*   \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
 refinement abstract_to_concrete_atm =
   psm refined via translation psm2sm to { atm and bank  }
 end
@@ -12034,14 +12033,17 @@ sequences)}\footnote{\DIFadd{ignoring the annotations $\tau_i$
 %DIFDELCMD <   \item 
 %DIFDELCMD < %%%
 \DIFdel{for any pair of composition declarations $m(p_1 : \mathsf{Set}[c_1], \composition p_2 : \tau_2[c_2]), m'(p'_1 : \mathsf{Set}[c'_1], \composition p'_2 : \tau'_2[c'_2]) \in M$, an axiom stating ``each instance has
-at most one owner'':}
+at most one owner'':} \DIFdelend
+
 \lstset{escapeinside = {*@}{@*}}
-%DIFDELCMD < \begin{lstlisting}[language=clif,morekeywords={then,with}]
+%DIFDELCMD < 
+\begin{lstlisting}[language=clif,morekeywords={then,with}]
 %DIFDELCMD < %%%
-\DIFdel{(forall (o o' i)
+*@ \DIFdelbegin \DIFdel{(forall (o o' i)
         (if (and }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{sequence-insert x$_1$ ($\cdots$
                               }\DIFaddend @*  (form: *@ \DIFdelbegin \DIFdel{sequence-member (form:pair o i)m)(form:sequence-member (form:pair o' i)m'))(= o o'}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{sequence-insert x$_r$ form:empty-sequence))$\cdots$)))}\DIFaddend @*  )))
 \end{lstlisting}
+
 \DIFdelbegin \DIFdel{In case }\texttt{\DIFdel{m}} %DIFAUXCMD
 \DIFdel{is represented in the simplified way, }\texttt{\DIFdel{(form:sequence-member (form:pair o i) m)}} %DIFAUXCMD
 \DIFdel{is replaced by }\texttt{\DIFdel{(m o i)}}%DIFAUXCMD
@@ -13437,12 +13439,14 @@ SubstName          ::= IRI
 %DIFDELCMD < \sclause{OMS Definitions}
 %DIFDELCMD < 
 
-%DIFDELCMD < \begin{lstlisting}[language=ebnf,escapeinside={()}]  %%%
+%DIFDELCMD < 
+\begin{lstlisting}[language=ebnf,escapeinside={()}]  %%%
 %DIF <  abstract syntax
 %DIFDELCMD < 
 
 %DIFDELCMD < %%%
-\DIF\DIFdel{OMSDefinition      ::= oms-definition OMSName }%DIFDELCMD < [%%%
+%\DIF
+( \DIFdelbegin \DIFdel{OMSDefinition      ::= oms-definition OMSName }%DIFDELCMD < [%%%
 \DIFdel{ConservativityStrength}%DIFDELCMD < ] %%%
 \DIFdel{OMS
 Symbol             ::= IRI
@@ -13461,7 +13465,8 @@ DefaultTranslation ::= default-trans LanguageRef
  ( \DIFaddbegin \DIFadd{RemovalKind        ::= keep | remove
 }\DIFaddend )  OMSLanguageTranslationRef ::= IRI
  ( \DIFaddbegin \DIFadd{Symbol             ::= IRI
-}\DIFaddend \end{lstlisting}
+}\DIFaddend )
+\end{lstlisting}
 
 \sclause{OMS Mappings}
 
@@ -13594,7 +13599,8 @@ Confidence         ::= Double
 \end{lstlisting}
 %DIFDELCMD < 
 
-%DIFDELCMD < \begin{lstlisting}[language=ebnf,escapeinside={()},mathescape]  %%%
+%DIFDELCMD < 
+\begin{lstlisting}[language=ebnf,escapeinside={()},mathescape]  %%%
 %DIF <  abstract syntax
 %DIFDELCMD < 
 
