--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -3863,32 +3863,31 @@ so there is no necessity to unite all specifications into one
 large specification.} \DIFaddend 
 \lstset{escapeinside = {*@}{@*}}
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
-*@ \DIFaddbegin \DIFadd{spec Int = %DIF > mono
+*@ \DIFaddbegin \DIFadd{spec Int = 
   Nat
-then %DIF > mono
+then 
      generated type Int ::= __ - __(Nat;Nat)
      forall a,b,c,d: Nat
-     .  a - b = c - d <=> a + d = c + b    %DIF > (equality_Int)%
+     .  a - b = c - d <=> a + d = c + b    
      sort  Nat < Int
-     forall a: Nat . a = a - 0             %DIF > (Nat2Int_embedding)%
+     forall a: Nat . a = a - 0             
 end
-}
+} \DIFaddend @* 
 
-\DIFadd{spec List = 
+*@ \DIFaddbegin \DIFadd{spec List = 
   Nat 
 then 
   sort Elem
-  free type List ::=  }[] \DIFadd{|  __ :: __ (Elem; List)
-     op   #__: List -> Nat;
+  free type List ::=  } \DIFaddend @* [] *@ \DIFaddbegin \DIFadd{|  __ :: __ (Elem; List)
+     op   $\#$__: List -> Nat;
      forall x,: Elem; L: List
-     . # }[] \DIFadd{= 0                              %DIF > (numberOf_nil_List)%
-     . # (x :: L) = suc( # L )               %DIF > (numberOf_NeList_List)%
+     . $\#$ }[] \DIFadd{= 0                              %DIF > (numberOf_nil_List)%
+     . $\#$ (x :: L) = suc( $\#$ L )               %DIF > (numberOf_NeList_List)%
 end
-}
-
-\DIFadd{network NatIntList = Nat, Int, List
+} \DIFaddend @*
+ *@ \DIFaddbegin \DIFadd{network NatIntList = Nat, Int, List
 end
-}\DIFaddend @* 
+} \DIFaddend @* 
 \end{lstlisting}
 
 \begin{figure}
